body and style added

--- a/task-manager/src/App.scss
+++ b/task-manager/src/App.scss
@@ -1,5 +1,8 @@
-.App {
+@use "./styles/partials/css-reset" as *;
+@use "./styles/partials/fonts" as *;
+
+.header {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
