--- a/task-manager/src/components/ListingTask/ListingTask.scss
+++ b/task-manager/src/components/ListingTask/ListingTask.scss
@@ -1,10 +1,14 @@
 .tasks {
   margin: 0.4rem;
-  width: 20%;
-
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  flex-wrap: wrap;
   &__container {
+    width: 20%;
     border: solid 0.1rem black;
     border-radius: 0.4rem;
+    margin: 0.4rem;
     display: flex;
     align-items: center;
     justify-content: center;
