--- a/task-manager/src/App.scss
+++ b/task-manager/src/App.scss
@@ -1,5 +1,6 @@
 @use "./styles/partials/css-reset" as *;
 @use "./styles/partials/fonts" as *;
+@use "./styles/partials/global" as *;
 body {
   font-size: 1rem;
   background-color: white;
@@ -12,8 +13,19 @@ h2 {
   text-transform: uppercase;
 }
 .header {
-  margin: 1rem;
+  // margin: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1rem 0;
+}
+.App{
+  height: 100vh;
+  background-image: url('../assets/bg_image.jpg');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  &__bg {
+
+  }
 }
