--- a/task-manager/src/components/ListingTask/ListingTask.scss
+++ b/task-manager/src/components/ListingTask/ListingTask.scss
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-
   &__container {
     width: 15rem;
     // border: solid 0.1rem black;
@@ -14,7 +13,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #EEEEEE;
+    background-color: rgba($color: #EEEEEE, $alpha: 0.7);
 
   }
   &__category {
@@ -27,7 +26,7 @@
   }
 }
 .task {
-  background-color: white;
+  background-color: rgba($color: #ffffff, $alpha: 0.8);
   width: 95%;
   padding: 0.4rem;
   margin: 0.4rem;
@@ -37,6 +36,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   &__content {
     margin-top: 0.2rem;
     margin-bottom: 0.2rem;
@@ -65,5 +65,15 @@
       background-color: #00458B;
       color: white;
     }
+  }
+}
+.main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  &__add-button {
+    width: 15rem;
+    margin-bottom: 1rem;
   }
 }
